--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,7 +21,7 @@ jobs:
             target: linux-x64
           - kind: windows
             os: windows-latest
-            target: win10-x64
+            target: win-x64
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
@@ -31,14 +31,14 @@ jobs:
         uses: actions/setup-dotnet@v3
           
       - name: Install Rust
-        if: ${{ matrix.target == 'win10-x64' }}
+        if: ${{ matrix.target == 'win-x64' }}
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: stable
           components: clippy, rustfmt
 
       - name: Publish Windows
-        if: ${{ matrix.target == 'win10-x64' }}
+        if: ${{ matrix.target == 'win-x64' }}
         run: .\publish.ps1
         
       - name: Publish Linux
