--- a/src/MinEdLauncher/MinEdLauncher.fsproj
+++ b/src/MinEdLauncher/MinEdLauncher.fsproj
@@ -68,23 +68,27 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FSharp.Data" Version="5.0.2" />
+    <PackageReference Include="FSharp.Data" Version="6.4.0" />
     <PackageReference Include="FSharpx.Collections" Version="3.1.0" />
+    <PackageReference Include="FsConfig" Version="4.1.0" />
+    <PackageReference Include="FsToolkit.ErrorHandling" Version="4.15.2" />
+    <PackageReference Include="FsToolkit.ErrorHandling.TaskResult" Version="4.15.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
     <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
-    <PackageReference Include="Serilog" Version="2.12.0" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
-    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
-    <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="7.0.0" />
-    <PackageReference Include="System.Security.Permissions" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
     <PackageReference Include="Mono.Posix.NETStandard" Version="5.20.1-preview" Condition="$(IsLinux)" />
+    <PackageReference Include="Serilog" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+    <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="8.0.0" />
+    <PackageReference Include="System.Security.Permissions" Version="8.0.0" />
     <PackageReference Include="TypeShape" Version="10.0.0" />
-    <PackageReference Include="FsConfig" Version="3.1.0" />
-    <PackageReference Update="FSharp.Core" Version="7.0.0" />
-    <PackageReference Include="FsToolkit.ErrorHandling" Version="4.0.0" />
-    <PackageReference Include="FsToolkit.ErrorHandling.TaskResult" Version="4.0.0" />
+    <PackageReference Update="FSharp.Core" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageVersion Update="FsConfig" Version="4.1.0" />
   </ItemGroup>
 
 </Project>
