--- a/tests/MinEdLauncher.Tests.fsproj
+++ b/tests/MinEdLauncher.Tests.fsproj
@@ -30,11 +30,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Expecto" Version="9.0.4" />
-    <PackageReference Include="Expecto.FsCheck" Version="9.0.4" />
-    <PackageReference Include="YoloDev.Expecto.TestSdk" Version="0.13.3" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
-    <PackageReference Update="FSharp.Core" Version="7.0.0" />
+    <PackageReference Include="Expecto" Version="10.2.1" />
+    <PackageReference Include="Expecto.FsCheck" Version="10.2.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+    <PackageReference Include="YoloDev.Expecto.TestSdk" Version="0.14.3" />
+    <PackageReference Update="FSharp.Core" />
   </ItemGroup>
 
   <ItemGroup>
