--- a/src/MinEdLauncher/MinEdLauncher.fsproj
+++ b/src/MinEdLauncher/MinEdLauncher.fsproj
@@ -55,6 +55,7 @@
     <Compile Include="Cobra.fs" />
     <Compile Include="Api.fs" />
     <Compile Include="MachineId.fs" />
+    <Compile Include="Legendary.fs" />
     <Compile Include="Epic.fs" />
     <Compile Include="Settings.fs" />
     <Compile Include="Console.fs" />
