--- a/tests/MinEdLauncher.Tests.fsproj
+++ b/tests/MinEdLauncher.Tests.fsproj
@@ -26,12 +26,14 @@
     <Compile Include="MachineId.fs" />
     <Compile Include="AuthorizedProduct.fs" />
     <Compile Include="Cobra.fs" />
+    <Compile Include="Legendary.fs" />
     <Compile Include="Main.fs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Expecto" Version="10.2.1" />
     <PackageReference Include="Expecto.FsCheck" Version="10.2.1" />
+    <PackageReference Include="Microsoft.Extensions.TimeProvider.Testing" Version="8.5.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
     <PackageReference Include="YoloDev.Expecto.TestSdk" Version="0.14.3" />
     <PackageReference Update="FSharp.Core" Version="8.0.200" />
