--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ lib/*
 !lib/libsteam_api.so
 release-notes.md
 benchmarks/MinEdLauncher.Benchmarks/BenchmarkDotNet.Artifacts/
-
+*.ico
 ## rust
 target/
 
