--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ path = "src/bootstrapper-rs/main.rs"
 windows = { version = "0.42", features = [ "Win32_UI_Shell", "Win32_Foundation", "Win32_UI_WindowsAndMessaging" ] }
 
 [build-dependencies]
-winres = "0.1"
+winresource = "0.1.17"
 
 [package.metadata.winres]
 ProductName = "MinEdLauncher.Bootstrap"
