refactor: address PR review feedback
- Remove dots from array indexers
- Use OrdinalIgnoreCaseSet for knownConfigKeys
- Update OrdinalIgnoreCaseSet.ofSeq to accept seq instead of array
- Remove redundant Set.toSeq, deconstruct directly
- Use Expect.wantOk instead of manual failtest
- Pad README tables for plain-text readability
- Change forceUpdate default to [], update docs and settings.json
- Restore FsConfig comment

--- a/src/MinEdLauncher/settings.json
+++ b/src/MinEdLauncher/settings.json
@@ -5,7 +5,7 @@
     "autoUpdate": true,
     "checkForLauncherUpdates": true,
     "maxConcurrentDownloads": 4,
-    "forceUpdate": "",
+    "forceUpdate": [],
     "processes": [],
     "shutdownProcesses": [],
     "filterOverrides": [
